fix(placeholder): Shine height on Safari/iOS (#905)
* fix(placeholder): Shine height

This PR fixes an issue with `.box` `background-size` causing the "shine" animation not to fill the box height on Safari/iOS.

Context: `.box` had no explicit height value set for its `background-size` property, and values default to auto if not set. However, in Safari/iOS, the `auto` for the height value is not the height of the container, but (from observation) the value set for width. This behavior seems to have caused the "shine" to only reach `75%` of the box's height in Safari/iOS.

* chore: Add changeset

* chore: Small package-lock update following npm i

--- a/packages/placeholder/style.module.css
+++ b/packages/placeholder/style.module.css
@@ -17,7 +17,7 @@
     rgba(211, 211, 211, 0) 100%
   );
   background-position: -300% 0;
-  background-size: 75%;
+  background-size: 75% 100%;
   animation: loading 2s infinite;
 }
 
